# adi-plugin-registry

./: Cargo.toml  Dockerfile  README.md  api.tsp
.github/workflows/: docker.yml
core/: Cargo.toml
core/src/: lib.rs  storage.rs
http/: Cargo.toml
http/src/: main.rs
http/tests/: web_ui_tests.rs
src/: main.rs
