[package]
name = "plugin-registry-core"
version = "0.8.4"
edition = "2021"
license = "BSL-1.0"
authors = ["ADI Team"]
description = "Core library for ADI plugin registry - storage and business logic"

[dependencies]
lib-plugin-registry = { path = "../../lib/lib-plugin-registry" }
lib-plugin-manifest = { path = "../../lib/lib-plugin-manifest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
semver = "1"
tokio = { version = "1.0", features = ["fs", "io-util"] }
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
tempfile = "3"
