[package]
name = "plugin-registry-http"
version = "0.8.4"
edition = "2021"
license = "BSL-1.0"
authors = ["ADI Team"]
description = "HTTP server for ADI plugin registry"

[[bin]]
name = "plugin-registry"
path = "src/main.rs"

[dependencies]
# Core library
plugin-registry-core = { path = "../core" }

# Web framework
axum = { version = "0.7", features = ["multipart"] }
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Compression / archive
flate2 = "1"
tar = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# HTTP utilities
lib-http-common = { path = "../../lib/lib-http-common" }
